config and urls updated